// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreferencesScreen: Shallow Render Component renders the component with two mocked calendars 1`] = `
<Component
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "column",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "#d6d7da",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 5,
        "padding": 5,
        "width": "100%",
      }
    }
  >
    <Component>
      ID of the selected Calendar ID:
       
      1
    </Component>
    <Picker
      mode="dialog"
      onValueChange={[Function]}
      selectedValue={1}
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    >
      <PickerItem
        key="1"
        label="Test-1"
        value={1}
      />
      <PickerItem
        key="2"
        label="Test-2"
        value={2}
      />
    </Picker>
  </Component>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "#d6d7da",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 5,
        "padding": 5,
        "width": "100%",
      }
    }
  >
    <Component>
      Default Scan Language: 
      EN
    </Component>
    <Picker
      mode="dialog"
      onValueChange={[Function]}
      selectedValue="EN"
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    >
      <PickerItem
        label="English"
        value="EN"
      />
      <PickerItem
        label="Swedish"
        value="SE"
      />
      <PickerItem
        label="German"
        value="DE"
      />
    </Picker>
  </Component>
</Component>
`;

exports[`PreferencesScreen: Shallow Render Component renders the component without retrieved calendars 1`] = `
<Component
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "column",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "#d6d7da",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 5,
        "padding": 5,
        "width": "100%",
      }
    }
  >
    <Component>
      ID of the selected Calendar ID:
       
      1
    </Component>
    <Picker
      mode="dialog"
      onValueChange={[Function]}
      selectedValue={1}
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    >
      <PickerItem
        label="Error: No Permission to access the calendars"
        value={1}
      />
    </Picker>
  </Component>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "#d6d7da",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 5,
        "padding": 5,
        "width": "100%",
      }
    }
  >
    <Component>
      Default Scan Language: 
      EN
    </Component>
    <Picker
      mode="dialog"
      onValueChange={[Function]}
      selectedValue="EN"
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    >
      <PickerItem
        label="English"
        value="EN"
      />
      <PickerItem
        label="Swedish"
        value="SE"
      />
      <PickerItem
        label="German"
        value="DE"
      />
    </Picker>
  </Component>
</Component>
`;
